--- a/css/style.css
+++ b/css/style.css
@@ -10,20 +10,44 @@
 /* Grands écrans (large desktops, 1200px et plus) */
 @media (min-width: 1200px) {
 header {
-  background-color: blue;
+}
+
+nav {
+  width: 100%;
+  top: 30px;
+}
+.contenantlelogo {
+width: 30%;
+}
+.logo {
+  width: 7%;
+  margin-left: -23px;
 }
 
 li {
   display: inline-block;
 }
 
+
+
 .navigation {
+  position: static;
+  width: 60%;
   text-align: right;
+}
+
+.titre {
+  width: 60%;
+  margin-left: 75px;
 }
 
 h1 {
   color: red;
   font-size: 40px;
+}
+
+p {
+  font-size: 30px;
 }
 
 }
