--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
 nav {
   width: 100%;
   top: 30px;
+  height: 120px;
 }
 .contenantlelogo {
 width: 30%;
@@ -29,22 +30,32 @@ li {
   display: inline-block;
 }
 
+ul {
+  font-size: 80%;
+}
 
 
 .navigation {
   margin:0 10px;
   position: static;
-  width: 60%;
+  /*width: 60%;*/
   text-align: right;
+  margin-top: -50px;
+  font-size: 80%;
 }
 
 .titre {
   width: 60%;
   margin-left: 75px;
 }
+.soustitre {
+  color: #484848;
+  font-size: 50px;
+}
+
 
 h1 {
-  color: red;
+  color: #FF5A5F;
   font-size: 40px;
 }
 
@@ -52,9 +63,35 @@ p {
   font-size: 30px;
 }
 
+h2, ul {
+  color: #484848;
+}
+
+
+.recherchedestination {
+  border: 1px solid lightgrey;
+  width: 90%;
+}
+
+.voyageur {
+  display: inline-block;
+  width: 90px;
+  height: 30px;
+}
 
 input {
+  height: 100px;
   border: none;
+}
+
+button {
+  font-size: 17px;
+  border-radius: 4px;
+  border: none;
+  color: white;;
+  background-color: #FF5A5F;
+  width: 130px;
+  height: 50px;
 }
 
 section {
@@ -78,10 +115,11 @@ img {
 
 .imageestimer {
   display: inline-block;
-  width: 250%;
+  width: 270%;
 }
 
 form {
+  margin-left: 5%;
   display: inline-block;
 }
 
@@ -90,8 +128,56 @@ form {
 }
 
 p {
-  text-align: center;
   font-size: 110%;
 }
+
+footer {
+  border: 1px solid lightgrey;
+}
+
+.devise {
+  width: 100%;
+  padding-top: 100px;
+  display: inline-block;
+}
+
+select {
+  height: 60px;
+  width: 200px;
+  display: block;
+}
+
+.bouttonestimer {
+background-color: #008489;
+width: 190px;
+height: 40px;
+}
+
+
+.airbnb, .decouvrir, .hebergement {
+  width: 330px;
+  display: inline-block;
+  font-size: 80%;
+  margin: 0 10px;
+}
+
+.marque {
+  display: inline-block;
+  width: 70%;
+}
+
+
+
+.politique {
+  font-size: 80%;
+  display: inline-block;
+  /*width: 70%;*/
+}
+
+.reseaux {
+  display: inline-block;
+  width: 40%;
+}
+
 
 }
