--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,17 @@
 
 /* Petits écrans (tablettes, 768px et plus) */
 @media (min-width: 768px) {
-.logo, .navigation, label, button, .destination {
-  display: none;
+
+
+
+.logo, .navigation, label, .destination {
+ display: none;
 }
+
+/*img{
+  max-width: 100%;
+  height: 200px;
+}*/
 .logotablette {
   width: 40px;
 }
@@ -34,6 +42,10 @@ h2, ul {
   color: #484848;
 }
 
+li {
+  display: inline-block;
+}
+
 section {
   display: inline-block;
 }
@@ -54,10 +66,96 @@ img {
   width: 300px;
 }
 
+
+form {
+  font-size: 10px;
+  width: 220px;
+  display: inline-block;
+}
+
+.h2estimer {
+  font-size: 27px;
+}
+
+section p {
+  font-size: 19px;
+}
+
+.imageestimer {
+  display: inline-block;
+  width: 380px;
+}
+
+
+footer {
+  border: 1px solid lightgrey;
+}
+
+.devise {
+  width: 80%;
+  height: 100px;
+  padding-top: 100px;
+  display: inline-block;
+}
+
+select {
+  height: 60px;
+  width: 200px;
+  display: block;
+}
+
+.bouttonestimer {
+  color: white;
+  background-color: #008489;
+  width: 190px;
+  height: 40px;
+}
+
+
+.airbnb, .decouvrir, .hebergement {
+  width: 130px;
+  display: inline-block;
+  font-size: 80%;
+  margin: 0 30px;
+}
+
+.marque {
+  display: inline-block;
+  width: 70%;
+}
+
+
+
+.politique {
+  font-size: 80%;
+  display: inline-block;
+  /*width: 70%;*/
+}
+
+.reseaux {
+  display: inline-block;
+  width: 40%;
+}
+
+
+
+
+
+
+
+
+
+
  }
 
 /* Ecrans moyens (desktops, 992px et plus) */
 @media (min-width: 992px) {
+
+.logotablette {
+  width: 10%;
+  margin-left: -23px;
+}
+
 header {
 }
 
@@ -69,10 +167,10 @@ nav {
 .contenantlelogo {
   width: 30%;
 }
-.logo {
+/*.logo {
   width: 7%;
   margin-left: -23px;
-}
+}*/
 
 li {
   margin:0 10px;
@@ -83,6 +181,9 @@ ul {
   font-size: 80%;
 }
 
+label, button {
+  display: inline-block;
+}
 
 .navigation {
   margin:0 10px;
@@ -91,6 +192,7 @@ ul {
   text-align: right;
   margin-top: -50px;
   font-size: 80%;
+  display: inline-block;
 }
 
 .titre {
