add display none for img estimer

--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,12 @@ figure, .imgphone, section {
 
 
 
-
 /* Petits écrans (tablettes, 768px et plus) */
 @media (min-width: 768px) {
 
 
 
-.logo, .logophone, .navigation, label, .destination {
+.logo, .logophone, .navigation, .imgphones, label, .destination {
  display: none;
 }
 
@@ -181,6 +180,12 @@ select {
   width: 10%;
   margin-left: -23px;
 }
+
+.logo {
+  display: block;
+  width: 10%;
+}
+
 
 header {
 }
